# Swiss-Super-League

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: linting.yml  tests.yml
src/: __init__.py
src/data/: make_dataset.py  make_dataset_final_score.py  make_dataset_full_season.py
src/utils/: request.py
tests/: test_utils.py
